kubernetes/nas/apps/networking/envoy-gateway/config/gateway.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname nas-gateway.techtales.io
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.100.20
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.techtales.io"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.techtales.io"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: techtales-io-tls
          - kind: Secret
            name: nas-techtales-io-tls
