kubernetes/nas/apps/networking/envoy-gateway/config/envoy-proxy.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: networking

---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  compression:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
